--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -6,24 +6,24 @@ spring:
       static-locations: classpath:/static/, classpath:/public/, classpath:/resources/, classpath:/META-INF/resources/
   application:
     name: gateway
-  cloud:
-    gateway:
-      routes:
-        - id: user-service
-          uri: lb://user-service
-          predicates:
-            - Path=/api/users/**
-            - Path=/api/login
-          filters:
-            - RewritePath=/api/users/verify/(?<segment>.*), /verify/${segment}
-            - RewritePath=/api/users/delete/(?<segment>.*), /users/delete/${segment}
-            - RewritePath=/api/users/(?<segment>.*), /users/${segment}
-        - id: order-service
-          uri: lb://order-service
-          predicates:
-            - Path=/api/orders/**
-          filters:
-          - RewritePath=/api/orders/(?<segment>.*), /orders/${segment}
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: user-service
+#          uri: lb://user-service
+#          predicates:
+#            - Path=/api/users/**
+#            - Path=/api/login
+#          filters:
+#            - RewritePath=/api/users/verify/(?<segment>.*), /verify/${segment}
+#            - RewritePath=/api/users/delete/(?<segment>.*), /users/delete/${segment}
+#            - RewritePath=/api/users/(?<segment>.*), /users/${segment}
+#        - id: order-service
+#          uri: lb://order-service
+#          predicates:
+#            - Path=/api/orders/**
+#          filters:
+#          - RewritePath=/api/orders/(?<segment>.*), /orders/${segment}
 
 springdoc:
   api-docs:
